welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: value update is not a member of plm.universe.Direction
  if(getDirection()=EST){
     ^SnakeBuggle:8: error: not found: value EST
  if(getDirection()=EST){
                    ^